--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   </head>
   <body>
     <h1>Discover Hidden Places in the World around You</h1>
-    <a href="#">Download Excursion (Coming Soon)</a>
-
+    <p>
+      <a class="cta" href="#">Download Excursion (Coming Soon)</a>
+    </p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" autoplay poster="posterimage.jpg"></video>
+      <h2>Your Personal Travel Guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="resources/images/camp.jpg" alt="camp">
+    <img src="resources/images/phone.png" alt="phone">
+    <h2>Coming Soon for Iphone and Android</h2>
+    <p>
+      <a class="cta" href="#">Download Excursion (Coming Soon)</a>
+    </p>
+    <div class="footer">
+      <p>Excursion</p>
+    </div>
   </body>
 </html>
